New version of homework1

--- a/Markup/Lesson 1 homework/index.html
+++ b/Markup/Lesson 1 homework/index.html
@@ -8,37 +8,37 @@
 
 <body>
 	
-	<div class="main">
+	
 		
-		<div class="profile">
+	<div class="profile">
 			
-			<h1 align="center">Карманов Алексей Николаевич</h1>
-			<div align="center">
-				<img src="img/alex.jpg" height="200">
-			</div>
-			<h3 align="center">Частный предприниматель</h3>
-			<hr>
-			
-			<p>Хочу учить фронтенд, потому что:</p>
-			<ul>
-				<li>Хочу стать программистом</li>
-				<li>Иметь стабильный заоработок</li>
-				<li>Рабоать фрилансером или в IT-компании</li>
-			</ul>
-			<hr>
-			
-			<p>Мой контактный телефон</p>
-			<p>+380991626644</p>
-			<br>
-			<p>Мой профиль в фейсбуке</p>
-			<p> <a href="https://www.facebook.com/alex.karmanov.75" target="_blank">Alex Karmanov facebook profile</a> </p>
-			<hr>
-			
-			<p>Мой фидбек:</p>
-			<p>В уроке по основа CSS звук опережает видео((((</p>
+		<h1>Карманов Алексей Николаевич</h1>
+		<div>
+			<img src="img/alex.jpg">
 		</div>
-
+		<h3>Частный предприниматель</h3>
+		<hr>
+			
+		<p>Хочу учить фронтенд, потому что:</p>
+		<ul>
+			<li>Хочу стать программистом</li>
+			<li>Иметь стабильный заоработок</li>
+			<li>Рабоать фрилансером или в IT-компании</li>
+		</ul>
+		<hr>
+			
+		<p>Мой контактный телефон</p>
+		<p>+380991626644</p>
+		<br>
+		<p>Мой профиль в фейсбуке</p>
+		<p> <a href="https://www.facebook.com/alex.karmanov.75" target="_blank">Alex Karmanov facebook profile</a> </p>
+		<hr>
+			
+		<p>Мой фидбек:</p>
+		<p>В уроке по основа CSS звук опережает видео((((</p>
 	</div>
+
+	
 
 </body>
 </html>
